# clawteam

./: .env.example  .gitignore  00.项目概览.md  Makefile  README.md  agent-runtime  docker-compose.yml  go.mod  go.sum  pyproject.toml  task.json
cmd/agent-runtime/: main.go
cmd/im-core/: main.go
deploy/: Dockerfile.agent-runtime  init-db.sql
internal/agent/: __init__.py  agent.go  runtime.py  summary_agent.py
internal/config/: __init__.py  config.go
internal/errors/: errors.go
internal/im/: api.go  errors.go  events.go  message.go  presence.go  repository.go  websocket.go
internal/llm/: __init__.py  anthropic.py  base.py  client.go  factory.py
internal/model/: __init__.py  agent.py  execution.py  llm.py  memory.py  skill.py  tool.py
internal/skills/: __init__.py  base.py  search.py  summarize.py
internal/state/: statemachine.go  statemachine_test.go
internal/tools/: __init__.py  base.py  engine.py  memory_tools.py  search_tools.py
milestone/2026s/00.sprint-0214~0401/: 01.产品规格说明.md  02.技术架构设计.md  03.Social Brain架构.md  04.Agent调度算法.md  05.MVP范围定义.md  06.数据模型设计.md  07.UI设计规格.md
pkg/llm/: client.go
test/: test_agent_runtime.py  test_tools.py
