[project]
name = "clawteam-agent-runtime"
version = "0.1.0"
description = "ClawTeam Agent Runtime - AI Agent Execution Environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ClawTeam", email = "dev@clawteam.com" }
]
keywords = ["ai", "agent", "runtime", "llm", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # LLM
    "anthropic>=0.18.0",
    "openai>=1.10.0",  # For embeddings

    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.0",

    # Message Queue
    "nats-py>=2.7.0",

    # Vector Search
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.3.0",

    # Tools
    "httpx>=0.26.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0",

    # Observability
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",

    # Utils
    "orjson>=3.9.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
agent-runtime = "clawteam.runtime.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["internal"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
